src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root {
  --ifm-color-primary: #ff3366;
  --ifm-color-primary-dark: #ff3366AA;
  --ifm-color-primary-darker: #ff336699;
  --ifm-color-primary-darkest: #ff336666;
  --ifm-color-primary-light: #ff3366;
  --ifm-color-primary-lighter: #ff3366;
  --ifm-color-primary-lightest: #ff3366;
  --ifm-code-font-size: 95%;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);

  --background: #fff;
  --ui: 0,0,0;
}

/* For readability concerns, you should choose a lighter palette in dark mode. */
[data-theme='dark'] {
  --ifm-color-primary: #ff3366;
  --ifm-color-primary-dark: #ff3366AA;
  --ifm-color-primary-darker: #ff336699;
  --ifm-color-primary-darkest: #ff336666;
  --ifm-color-primary-light: #ff3366;
  --ifm-color-primary-lighter: #ff3366;
  --ifm-color-primary-lightest: #ff3366;
  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);

  --background: #070510;
  --ui: 255,255,255;
}

html {
  background: var(--background);
}

body {
  max-width: 1440px;
  margin: 0 auto;
}

.navbar.navbar--fixed-top {
  background: linear-gradient(0deg, transparent 0%, var(--background) 100%);
  box-shadow: none;
}

.navbar__brand {
  width: 100%;
}

.navbar__logo {
  width: 52px;
  height: 52px;
  filter: invert(1);
}
[data-theme='dark'] .navbar__logo {
  filter: invert(0);
}

.docItemCol_node_modules-\@docusaurus-theme-classic-lib-theme-DocItem-Layout-styles-module {
  padding-inline: 48px;
}

/* hide the default homepage. */
.theme-doc-sidebar-item-link [href="/docs/"] {
  display: none;
}

.theme-doc-sidebar-container {
  border-right: 1px solid rgba(var(--ui), 0.1) !important;
}

.table-of-contents__left-border {
  border-left: 1px solid rgba(var(--ui), 0.1);
}

a {
  color: unset;
}
a:hover {
  color: unset;
  text-decoration: underline;
}

